styles/globals.css
* {
  box-sizing: border-box;
}

#__next {
  max-width: 100vw;
  min-height: 100vh;
}

a {
  cursor: pointer;

  padding: var(--s-4);
  margin: calc(-1 * var(--s-4));

  text-decoration: underline currentcolor;
}

a:hover,
a:active {
  filter: brightness(0.7);
}
a:focus,
a:focus-visible {
  outline-style: double;
  outline-color: currentColor;
  outline-width: var(--s-3);
}

